--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,6 +5,8 @@
   %a I
   %a{href: "#"} Courses
   %a I
+  %a{href: "#"} Contact us
+  %a I
   %a{href: "#"} Sign up
   %a I
-  %a{href: "#"} Contact us
+  %a{href: "#"} login
