Added contact form

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,7 +5,7 @@
   %a I
   %a{href: "#"} Courses
   %a I
-  %a{href: "#"} Contact us
+  %a{href: "/contact"} Contact us
   %a I
   %a{href: "#"} Sign up
   %a I
