--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,14 +29,17 @@ body{
 .title{
   text-transform: uppercase;
   font-size: 50px;
+  margin: 10px;
 }
 .welcome{
   margin-right: 1400px;
   font-size: 30px;
+  margin-left: 30px;
 }
 .welcoming_message{
   margin-right: 1400px;
   font-size: 20px;
+  margin: 10px;
 }
 .header{
   font-family: $font;
@@ -48,5 +51,10 @@ body{
   direction: rtl;
 }
 h1{
+  margin: 5px;
   text-transform: uppercase;
+}
+form label, form input {
+  display: block;
+  margin: 10px;
 }
