--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,9 @@
     = csrf_meta_tags
 
   %body
+    - flash.each do |key, value|
+      = content_tag :div, content_tag(:p, value), id: "#{key}" unless value.blank?
+
     = render "shared/header"
     %div#main_content
       = yield
