--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,26 @@ body{
   color: black;
   direction: rtl;
 }
+.footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 10rem;
+  width: 100%;
+  background-color: grey;
+  color: white;
+  direction: ltr;
+  text-align: center;
+}
+.column {
+  float: left;
+  width: 33.33%
+}
+.footer:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 h1{
   margin: 5px;
   text-transform: uppercase;
