--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,1 +1,10 @@
-%p more text
+.footer
+  .column
+    %h2 column1
+    %p Some Text
+  .column
+    %h2 column1
+    %p Some Text
+  .column
+    %h2 column1
+    %p Some Text
