--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,10 +1,20 @@
 .footer
   .column
-    %h2 column1
-    %p Some Text
+    %h4
+      %u Contact details
+    %p Address: Fake Street 123, Fake City ABC123
+    %p email: mike@email
+    %p phone: 1234567890
+    %p Opening/Closing times: 9:00 - 18:00
   .column
-    %h2 column1
-    %p Some Text
+    %h4
+      %u About Us
+    %p This is a coursework project
+    %p by Mikel Lizarralde Larranaga
+    %p for COM2025
   .column
-    %h2 column1
-    %p Some Text
+    %h4
+      %u Why choose Lizard
+    %p With a small number of students per class
+    %p we at Lizard strive to make sure each student
+    %p makes the best out of their time here.
