--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,12 +1,26 @@
 .header
-  %a{href: "/"} Home
-  %a I
-  %a{href: "#"} About Lizard English
-  %a I
-  %a{href: "#"} Courses
-  %a I
-  %a{href: "/contact"} Contact us
-  %a I
-  %a{href: "#"} Sign up
-  %a I
-  %a{href: "#"} login
+  - if user_signed_in?
+    %a{href: "/"} Home
+    = '|'
+    %a{href: "#"} About Lizard English
+    = '|'
+    %a{href: "/lectures"} Lectures
+    = '|'
+    %a{href: "/contact"} Contact us
+    = '|'
+    = "#{current_user.email} |"
+    = link_to t('profile'), edit_user_registration_path
+    = '|'
+    = link_to t('logout'), destroy_user_session_path, method: 'delete'
+  - else
+    %a{href: "/"} Home
+    = '|'
+    %a{href: "#"} About Lizard English
+    = '|'
+    %a{href: "/lectures"} Lectures
+    = '|'
+    %a{href: "/contact"} Contact us
+    = '|'
+    = link_to t('login'), new_user_session_path
+    = '|'
+    = link_to t('sign_up'), new_user_registration_path
