--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,7 +2,7 @@
   - if user_signed_in?
     %a{href: "/"} Home
     = '|'
-    %a{href: "#"} About Lizard English
+    %a{href: "/teachers"} Our Teachers
     = '|'
     %a{href: "/lectures"} Lectures
     = '|'
@@ -15,7 +15,7 @@
   - else
     %a{href: "/"} Home
     = '|'
-    %a{href: "#"} About Lizard English
+    %a{href: "/teachers"} Our Teachers
     = '|'
     %a{href: "/lectures"} Lectures
     = '|'
