--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,10 +22,18 @@ $color: #9E258A; //purple
 body{
   font-family: $font;
   background-color: $color;
-  color: white;
+  color: black;
   margin: 0px;
   padding: 0px;
 }
+th {
+  padding: 5px;
+}
+
+td {
+  padding: 5px;
+}
+
 .title{
   text-transform: uppercase;
   font-size: 50px;
@@ -108,6 +116,7 @@ input.valid.success-alert {
   border: 2px solid #4CAF50;
   color: green;
 }
+
 h1{
   margin: 5px;
   text-transform: uppercase;
