--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -1,7 +1,8 @@
+%script{:src => "http://code.jquery.com/jquery-latest.js", :type => "text/javascript"}
 %h1= t('.title')
 %p= t('.contact_us')
 
-= form_tag request_contact_path, :id => 'contact_id', method: 'post' do
+= form_tag request_contact_path, :html => {:id => "contactForm"}, method: 'post' do
   = label_tag :name, t('.name')
   = text_field_tag :name, '', title: t('.enter_name'), size: 50
 
